reco/src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

.bgimage{
  @apply bg-[url('/landingpage/home.svg')] bg-cover bg-center bg-no-repeat;
}

.fontcolorgradient{
  @apply bg-gradient-to-r from-[#023e5a] to-[#a4c74f] bg-clip-text text-transparent text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold
}

.greenbutton{
  @apply cursor-pointer bg-[#A7CB4F] hover:bg-[#96b83e] shadow-md text-black font-mono text-base sm:text-lg py-3 px-8 rounded-2xl transition-all duration-300 flex items-center justify-center hover:scale-105 w-full sm:w-auto
}
.bluebutton{
  @apply cursor-pointer bg-[#013C5A] hover:bg-[#012c42] shadow-md text-white font-mono text-base sm:text-lg py-3 px-12 rounded-2xl transition-all duration-300 flex items-center justify-center hover:scale-105 w-full sm:w-auto
}
.tester{
  @apply border border-black
}

.scaler{
  @apply scale-100 hover:scale-110 transition-all duration-300 ease-in-out
}

